Fixes modal issue on safari

--- a/src/app/style/_global.scss
+++ b/src/app/style/_global.scss
@@ -411,6 +411,8 @@ button.btn-view-header {
 .no-scroll{
   overflow-y: hidden;
   position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 
